--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "qr-scanner": "^1.2.0",
+    "qrcode": "^1.4.4"
   }
 }
